--- a/package.json
+++ b/package.json
@@ -13,26 +13,26 @@
     "@radix-ui/react-accordion": "^1.1.0",
     "@radix-ui/react-alert-dialog": "^1.0.2",
     "@radix-ui/react-aspect-ratio": "^1.0.1",
-    "@radix-ui/react-avatar": "^1.0.1",
+    "@radix-ui/react-avatar": "^1.0.2",
     "@radix-ui/react-checkbox": "^1.0.3",
     "@radix-ui/react-collapsible": "^1.0.1",
     "@radix-ui/react-context-menu": "^2.1.1",
     "@radix-ui/react-dialog": "^1.0.2",
     "@radix-ui/react-dropdown-menu": "^2.0.1",
     "@radix-ui/react-hover-card": "^1.0.3",
-    "@radix-ui/react-label": "^2.0.0",
+    "@radix-ui/react-label": "^2.0.1",
     "@radix-ui/react-menubar": "^1.0.0",
     "@radix-ui/react-navigation-menu": "^1.1.1",
     "@radix-ui/react-popover": "^1.0.2",
     "@radix-ui/react-progress": "^1.0.2",
     "@radix-ui/react-radio-group": "^1.1.0",
     "@radix-ui/react-scroll-area": "^1.0.2",
-    "@radix-ui/react-select": "^1.2.0",
+    "@radix-ui/react-select": "^1.2.1",
     "@radix-ui/react-separator": "^1.0.1",
     "@radix-ui/react-slider": "^1.1.1",
     "@radix-ui/react-slot": "^1.0.1",
     "@radix-ui/react-switch": "^1.0.2",
-    "@radix-ui/react-tabs": "^1.0.2",
+    "@radix-ui/react-tabs": "^1.0.3",
     "@radix-ui/react-toast": "^1.1.2",
     "@radix-ui/react-toggle": "^1.0.1",
     "@radix-ui/react-toggle-group": "^1.0.1",
@@ -48,10 +48,13 @@
     "eslint-config-next": "13.3.1",
     "lucide-react": "^0.177.0",
     "next": "13.3.1",
+    "openai": "^3.2.1",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-code-blocks": "^0.0.9-0",
+    "react-colorful": "^5.6.1",
     "react-dom": "18.2.0",
+    "react-hot-toast": "^2.4.1",
     "tailwind-merge": "^1.12.0",
     "tailwindcss": "3.3.1",
     "tailwindcss-animate": "^1.0.5",
